--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\tripa\AppData\Local\Temp\testng-eclipse--1811695894\testng-customsuite.xml</span>
+                    <span>C:\Users\tripa\AppData\Local\Temp\testng-eclipse-1411172667\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\tripa\AppData\Local\Temp\testng-eclipse--1811695894\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\tripa\AppData\Local\Temp\testng-eclipse-1411172667\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testScript')
 data.setCell(0, 2, 'assignment.AutomationPractice')
-data.setCell(0, 3, 27037);
+data.setCell(0, 3, 30569);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 seconds</span>
+              <span class="suite-total-time">Total running time: 30 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -208,7 +208,7 @@ return data;
               <span class="reporter-method-name">testScript</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Step Description--> Click on Sign In Button</span>
-                <span class="reporter-method-output">Step Description--> Set Email Address in Create an coount field || Input Value : lcscvshgpz@gmail.com</span>
+                <span class="reporter-method-output">Step Description--> Set Email Address in Create an coount field || Input Value : notqzoqkkb@gmail.com</span>
                 <span class="reporter-method-output">Step Description--> Click on Create an account button</span>
                 <span class="reporter-method-output">Step Description--> Select Male Checkbox for title</span>
                 <span class="reporter-method-output">Step Description--> Set Customer First Name || Input Value : First Name</span>
@@ -270,11 +270,11 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testScript</span>
-                <span class="method-start">12094 ms</span>
+                <span class="method-start">12130 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">39133 ms</span>
+                <span class="method-start">42702 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
